V3.2.2 修改 获取打印机列表 逻辑